# des-y6-image-sims-analysis

./: .gitignore  LICENSE  README.md  environment.yml  matching.ipynb  measure_chromatic.py  measure_clustering.py  measure_grid-chromatic.py  measure_response.py  measure_tomographic-integrals.py  plot_cov.py  plot_tomography.py  pyproject.toml  tomographic_matching.py  tomography.py  weights.py
data/: N_gamma_alpha_v0_bs.hdf5  N_gamma_alpha_v0_jk.hdf5  N_gamma_alpha_v1.hdf5  N_gamma_alpha_v2_statistical-neighbor-nz.hdf5  N_gamma_alpha_v2_statistical-neighbor-occupancy.hdf5  N_gamma_alpha_v2_statistical-neighbor.hdf5  N_gamma_alpha_v2_statistical-nz.hdf5  N_gamma_alpha_v2_statistical-occupancy.hdf5  N_gamma_alpha_v2_statistical.hdf5  N_gamma_alpha_v3_statistical-neighbor-nz.hdf5  N_gamma_alpha_v3_statistical-neighbor-occupancy.hdf5  N_gamma_alpha_v3_statistical-neighbor.hdf5  N_gamma_alpha_v3_statistical-nz.hdf5  N_gamma_alpha_v3_statistical-occupancy.hdf5  N_gamma_alpha_v3_statistical.hdf5  N_gamma_alpha_v3_statistical_i_20.0_20.5.hdf5  N_gamma_alpha_v3_statistical_i_20.5_21.0.hdf5  N_gamma_alpha_v3_statistical_i_21.0_21.5.hdf5  N_gamma_alpha_v3_statistical_i_21.5_22.0.hdf5  N_gamma_alpha_v3_statistical_i_22.0_22.5.hdf5  N_gamma_alpha_v3_statistical_i_22.5_23.0.hdf5  N_gamma_alpha_v3_statistical_i_23.0_23.5.hdf5  N_gamma_alpha_v3_statistical_i_23.5_24.0.hdf5  N_gamma_alpha_v3_statistical_i_24.0_24.5.hdf5  N_gamma_alpha_v3_statistical_y3-complement.hdf5  N_gamma_alpha_v3_statistical_y3.hdf5  README.md
des_y6_imsim_analysis/: bump.py  garys_Tz.py  interpolant.py  stats.py  (+4 more)
(+133 files in other folders)
